// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sample documents > parses Allowance-example.xml 1`] = `
{
  "accountingCost": "4025:123:4343",
  "additionalDocuments": [
    {
      "attachmentFilename": "",
      "attachmentMime": "",
      "description": "",
      "id": "DR35141",
      "scheme": "ABT",
      "typeCode": "130",
      "uri": "",
    },
    {
      "attachmentFilename": "",
      "attachmentMime": "",
      "description": "Technical specification",
      "id": "ts12345",
      "scheme": "",
      "typeCode": "",
      "uri": "www.techspec.no",
    },
  ],
  "allowanceCharges": [
    {
      "amount": 200,
      "baseAmount": 1000,
      "factor": 20,
      "isCharge": true,
      "reason": "Cleaning",
      "reasonCode": "CG",
      "taxCategory": "S",
      "taxPercent": 25,
    },
    {
      "amount": 200,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": false,
      "reason": "Discount",
      "reasonCode": "95",
      "taxCategory": "S",
      "taxPercent": 25,
    },
  ],
  "buyerReference": "0150abc",
  "contractReference": "framework no 1",
  "currency": "EUR",
  "customer": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Hovedgatan 32",
        "Po box 878",
      ],
      "postalZone": "456 34",
      "subentity": "Södermalm",
    },
    "companyId": "39937423947",
    "contactName": "Lisa Johnson",
    "email": "lj@buyer.se",
    "endpointId": "4598375937",
    "endpointScheme": "0002",
    "hasAddress": true,
    "identifiers": [
      "0002:4598375937",
    ],
    "legalForm": "",
    "legalName": "Buyer Official Name",
    "name": "BuyerTradingName AS",
    "phone": "23434234",
    "taxRegistration": "",
    "vatId": "SE4598375937",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Delivery street 2",
        "Building 56",
        "Gate 15",
      ],
      "postalZone": "21234",
      "subentity": "Södermalm",
    },
    "date": "2017-11-01",
    "hasAddress": true,
    "locationId": "0088:7300010000001",
    "partyName": "Delivery party Name",
  },
  "despatchReference": "",
  "dueDate": "2017-12-01",
  "id": "Snippet1",
  "isCreditNote": false,
  "issueDate": "2017-11-13",
  "lines": [
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [
        {
          "amount": 1,
          "baseAmount": 100,
          "factor": 1,
          "isCharge": true,
          "reason": "Cleaning",
          "reasonCode": "CG",
          "taxCategory": "",
          "taxPercent": 0,
        },
        {
          "amount": 101,
          "baseAmount": 0,
          "factor": 0,
          "isCharge": false,
          "reason": "Discount",
          "reasonCode": "95",
          "taxCategory": "",
          "taxPercent": 0,
        },
      ],
      "amount": 4000,
      "baseQuantity": 1,
      "baseQuantityUnit": "C62",
      "classifications": [
        "SRV 09348023",
      ],
      "description": "Description of item",
      "grossPrice": 450,
      "id": "1",
      "name": "item name",
      "note": "Testing note on line level",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "NO",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 40,
      "properties": [],
      "quantity": 10,
      "sellerItemId": "97iugug876",
      "standardItemId": "",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "C62",
      "unitPrice": 410,
    },
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [],
      "amount": 1000,
      "baseQuantity": 2,
      "baseQuantityUnit": "C62",
      "classifications": [
        "SRV 86776",
      ],
      "description": "Description of item",
      "grossPrice": 0,
      "id": "2",
      "name": "item name",
      "note": "Testing note on line level",
      "objectId": "",
      "orderLineReference": "124",
      "originCountry": "",
      "periodEnd": "2017-12-05",
      "periodStart": "2017-12-01",
      "priceDiscount": 0,
      "properties": [
        {
          "name": "AdditionalItemName",
          "value": "AdditionalItemValue",
        },
      ],
      "quantity": 10,
      "sellerItemId": "97iugug876",
      "standardItemId": "",
      "taxCategory": "E",
      "taxPercent": 0,
      "unitCode": "C62",
      "unitPrice": 100,
    },
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [
        {
          "amount": 1,
          "baseAmount": 100,
          "factor": 1,
          "isCharge": true,
          "reason": "Charge",
          "reasonCode": "CG",
          "taxCategory": "",
          "taxPercent": 0,
        },
        {
          "amount": 101,
          "baseAmount": 0,
          "factor": 0,
          "isCharge": false,
          "reason": "Discount",
          "reasonCode": "95",
          "taxCategory": "",
          "taxPercent": 0,
        },
      ],
      "amount": 900,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 86776",
      ],
      "description": "Description of item",
      "grossPrice": 0,
      "id": "3",
      "name": "item name",
      "note": "Testing note on line level",
      "objectId": "",
      "orderLineReference": "124",
      "originCountry": "",
      "periodEnd": "2017-12-05",
      "periodStart": "2017-12-01",
      "priceDiscount": 0,
      "properties": [
        {
          "name": "AdditionalItemName",
          "value": "AdditionalItemValue",
        },
      ],
      "quantity": 10,
      "sellerItemId": "97iugug876",
      "standardItemId": "",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "C62",
      "unitPrice": 100,
    },
  ],
  "notes": [
    "Please note we have a new phone number: 22 22 22 22",
  ],
  "orderReference": "",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "GB82WEST12345698765432",
      "accountName": "AccountName",
      "bic": "WESTGB2L",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "30",
      "debitedAccount": "",
      "mandateId": "",
      "name": "Credit transfer",
      "paymentIds": [
        "Snippet1",
      ],
    },
  ],
  "paymentTerms": [
    "Payment within 10 days, 2% discount",
  ],
  "periodEnd": "2017-12-31",
  "periodStart": "2017-12-01",
  "precedingInvoices": [],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "London",
      "country": "GB",
      "lines": [
        "Main street 1",
        "Postbox 123",
      ],
      "postalZone": "GB 123 EW",
      "subentity": "",
    },
    "companyId": "GB983294",
    "contactName": "",
    "email": "",
    "endpointId": "7300010000001",
    "endpointScheme": "0088",
    "hasAddress": true,
    "identifiers": [
      "99887766",
    ],
    "legalForm": "AdditionalLegalInformation",
    "legalName": "SupplierOfficialName Ltd",
    "name": "SupplierTradingName Ltd.",
    "phone": "",
    "taxRegistration": "",
    "vatId": "GB1232434",
  },
  "taxAmountInTaxCurrency": 9324,
  "taxCurrency": "SEK",
  "taxPointDate": "2017-12-01",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 25,
      "taxAmount": 1225,
      "taxableAmount": 4900,
    },
    {
      "category": "E",
      "exemptionReason": "Reason for tax exempt",
      "exemptionReasonCode": "",
      "percent": 0,
      "taxAmount": 0,
      "taxableAmount": 1000,
    },
  ],
  "totals": {
    "allowanceTotal": 200,
    "chargeTotal": 200,
    "lineExtension": 5900,
    "payable": 6125,
    "prepaid": 1000,
    "rounding": 0,
    "taxAmount": 1225,
    "taxExclusive": 5900,
    "taxInclusive": 7125,
  },
  "typeCode": "380",
}
`;

exports[`sample documents > parses Norwegian-example-1.xml 1`] = `
{
  "accountingCost": "Project cost code 123",
  "additionalDocuments": [
    {
      "attachmentFilename": "",
      "attachmentMime": "",
      "description": "Timesheet",
      "id": "Doc1",
      "scheme": "",
      "typeCode": "",
      "uri": "http://www.suppliersite.eu/sheet001.html",
    },
    {
      "attachmentFilename": "Hours-spent.csv",
      "attachmentMime": "application/pdf",
      "description": "EHF specification",
      "id": "Doc2",
      "scheme": "",
      "typeCode": "",
      "uri": "",
    },
  ],
  "allowanceCharges": [
    {
      "amount": 100,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": true,
      "reason": "Freight",
      "reasonCode": "FC",
      "taxCategory": "S",
      "taxPercent": 25,
    },
    {
      "amount": 100,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": false,
      "reason": "Promotion discount",
      "reasonCode": "95",
      "taxCategory": "S",
      "taxPercent": 25,
    },
  ],
  "buyerReference": "3150bdn",
  "contractReference": "Contract321",
  "currency": "NOK",
  "customer": {
    "address": {
      "city": "Anytown",
      "country": "NO",
      "lines": [
        "Anystreet 8",
        "Back door",
      ],
      "postalZone": "101",
      "subentity": "RegionB",
    },
    "companyId": "987654325",
    "contactName": "John Doe",
    "email": "john@buyercompany.no",
    "endpointId": "987654325",
    "endpointScheme": "0192",
    "hasAddress": true,
    "identifiers": [
      "0088:3456789012098",
    ],
    "legalForm": "",
    "legalName": "Buyercompany ASA",
    "name": "The Buyercompany",
    "phone": "5121230",
    "taxRegistration": "",
    "vatId": "NO987654325MVA",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": {
    "address": {
      "city": "",
      "country": "",
      "lines": [],
      "postalZone": "",
      "subentity": "",
    },
    "date": "2013-06-15",
    "hasAddress": false,
    "locationId": "0088:6754238987643",
    "partyName": "",
  },
  "despatchReference": "",
  "dueDate": "2013-07-20",
  "id": "TOSL108",
  "isCreditNote": false,
  "issueDate": "2013-06-30",
  "lines": [
    {
      "accountingCost": "BookingCode001",
      "allowanceCharges": [
        {
          "amount": 12,
          "baseAmount": 0,
          "factor": 0,
          "isCharge": false,
          "reason": "Damage",
          "reasonCode": "",
          "taxCategory": "",
          "taxPercent": 0,
        },
        {
          "amount": 12,
          "baseAmount": 0,
          "factor": 0,
          "isCharge": true,
          "reason": "Testing",
          "reasonCode": "",
          "taxCategory": "",
          "taxPercent": 0,
        },
      ],
      "amount": 1273,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "MP 12344321",
        "STI 65434568",
      ],
      "description": "Processor: Intel Core 2 Duo SU9400 LV (1.4GHz). RAM: 3MB. Screen
				1440x900",
      "grossPrice": 1500,
      "id": "1",
      "name": "Laptop computer",
      "note": "Scratch on box",
      "objectId": "",
      "orderLineReference": "1",
      "originCountry": "DE",
      "periodEnd": "2013-06-30",
      "periodStart": "2013-06-01",
      "priceDiscount": 227,
      "properties": [
        {
          "name": "Color",
          "value": "Black",
        },
      ],
      "quantity": 1,
      "sellerItemId": "JB007",
      "standardItemId": "1234567890124",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "NAR",
      "unitPrice": 1273,
    },
    {
      "accountingCost": "BookingCode002",
      "allowanceCharges": [],
      "amount": -3.96,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "MP 32344324",
        "STI 65434567",
      ],
      "description": "",
      "grossPrice": 0,
      "id": "2",
      "name": "Returned "Advanced computing" book",
      "note": "Cover is slightly damaged.",
      "objectId": "",
      "orderLineReference": "5",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": -1,
      "sellerItemId": "JB008",
      "standardItemId": "1234567890125",
      "taxCategory": "S",
      "taxPercent": 15,
      "unitCode": "NAR",
      "unitPrice": 3.96,
    },
    {
      "accountingCost": "BookingCode003",
      "allowanceCharges": [],
      "amount": 4.96,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "MP 32344324",
        "STI 65434566",
      ],
      "description": "",
      "grossPrice": 2.75,
      "id": "3",
      "name": ""Computing for dummies" book",
      "note": "",
      "objectId": "",
      "orderLineReference": "3",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0.27,
      "properties": [],
      "quantity": 2,
      "sellerItemId": "JB009",
      "standardItemId": "1234567890126",
      "taxCategory": "S",
      "taxPercent": 15,
      "unitCode": "NAR",
      "unitPrice": 2.48,
    },
    {
      "accountingCost": "BookingCode004",
      "allowanceCharges": [],
      "amount": -25,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "MP 12344322",
        "STI 65434565",
      ],
      "description": "",
      "grossPrice": 0,
      "id": "4",
      "name": "Returned IBM 5150 desktop",
      "note": "",
      "objectId": "",
      "orderLineReference": "2",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": -1,
      "sellerItemId": "JB010",
      "standardItemId": "1234567890127",
      "taxCategory": "E",
      "taxPercent": 0,
      "unitCode": "NAR",
      "unitPrice": 25,
    },
    {
      "accountingCost": "BookingCode005",
      "allowanceCharges": [],
      "amount": 187.5,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "MP 12344325",
        "STI 65434564",
      ],
      "description": "",
      "grossPrice": 0,
      "id": "5",
      "name": "Network cable",
      "note": "",
      "objectId": "",
      "orderLineReference": "4",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [
        {
          "name": "Type",
          "value": "Cat5",
        },
      ],
      "quantity": 250,
      "sellerItemId": "JB011",
      "standardItemId": "1234567890128",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "MTR",
      "unitPrice": 0.75,
    },
  ],
  "notes": [
    "Ordered in our booth at the convention.",
  ],
  "orderReference": "123",
  "originatorReference": "",
  "payee": {
    "address": {
      "city": "",
      "country": "",
      "lines": [],
      "postalZone": "",
      "subentity": "",
    },
    "companyId": "999999999",
    "contactName": "",
    "email": "",
    "endpointId": "",
    "endpointScheme": "",
    "hasAddress": false,
    "identifiers": [
      "0088:2298740918237",
    ],
    "legalForm": "",
    "legalName": "",
    "name": "Ebeneser Scrooge AS",
    "phone": "",
    "taxRegistration": "",
    "vatId": "",
  },
  "paymentMeans": [
    {
      "account": "NO9386011117947",
      "accountName": "",
      "bic": "DNBANOKK",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "31",
      "debitedAccount": "",
      "mandateId": "",
      "name": "",
      "paymentIds": [
        "0003434323213231",
      ],
    },
  ],
  "paymentTerms": [
    "2 % discount if paid within 2 days. Penalty percentage 10% from due date",
  ],
  "periodEnd": "2013-06-30",
  "periodStart": "2013-06-01",
  "precedingInvoices": [],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "Big city",
      "country": "NO",
      "lines": [
        "Main street 34",
        "Suite 123",
      ],
      "postalZone": "54321",
      "subentity": "RegionA",
    },
    "companyId": "123456785",
    "contactName": "Antonio Salesmacher",
    "email": "antonio@salescompany.no",
    "endpointId": "123456785",
    "endpointScheme": "0192",
    "hasAddress": true,
    "identifiers": [
      "0088:1238764941386",
    ],
    "legalForm": "",
    "legalName": "The Sellercompany ASA",
    "name": "Salescompany ltd.",
    "phone": "46211230",
    "taxRegistration": "Foretaksregisteret",
    "vatId": "NO123456785MVA",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "2013-06-30",
  "taxRepresentative": {
    "address": {
      "city": "Newtown",
      "country": "NO",
      "lines": [
        "Regent street",
        "Front door",
      ],
      "postalZone": "101",
      "subentity": "RegionC",
    },
    "companyId": "",
    "contactName": "",
    "email": "",
    "endpointId": "",
    "endpointScheme": "",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "",
    "name": "Tax handling company AS",
    "phone": "",
    "taxRegistration": "",
    "vatId": "NO999999999MVA",
  },
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 25,
      "taxAmount": 365.13,
      "taxableAmount": 1460.5,
    },
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 15,
      "taxAmount": 0.15,
      "taxableAmount": 1,
    },
    {
      "category": "E",
      "exemptionReason": "Exempt New Means of Transport",
      "exemptionReasonCode": "",
      "percent": 0,
      "taxAmount": 0,
      "taxableAmount": -25,
    },
  ],
  "totals": {
    "allowanceTotal": 100,
    "chargeTotal": 100,
    "lineExtension": 1436.5,
    "payable": 802,
    "prepaid": 1000,
    "rounding": 0.22,
    "taxAmount": 365.28,
    "taxExclusive": 1436.5,
    "taxInclusive": 1801.78,
  },
  "typeCode": "380",
}
`;

exports[`sample documents > parses SK-full-example.xml 1`] = `
{
  "accountingCost": "Stredisko 4200",
  "additionalDocuments": [],
  "allowanceCharges": [
    {
      "amount": 40,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": false,
      "reason": "Zľava za dlhodobú spoluprácu",
      "reasonCode": "",
      "taxCategory": "S",
      "taxPercent": 23,
    },
  ],
  "buyerReference": "OBJ-2026-311",
  "contractReference": "ZML-2024-118",
  "currency": "EUR",
  "customer": {
    "address": {
      "city": "Košice",
      "country": "SK",
      "lines": [
        "Hlavná 47",
      ],
      "postalZone": "040 01",
      "subentity": "Košický kraj",
    },
    "companyId": "31654987",
    "contactName": "Mgr. Zuzana Hrubá",
    "email": "uctaren@tos-priklad.sk",
    "endpointId": "2023114455",
    "endpointScheme": "0245",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "Tatranská obchodná spoločnosť, a. s.",
    "name": "Tatranská obchodná spoločnosť",
    "phone": "+421 55 623 1199",
    "taxRegistration": "",
    "vatId": "SK2023114455",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": {
    "address": {
      "city": "",
      "country": "",
      "lines": [],
      "postalZone": "",
      "subentity": "",
    },
    "date": "2026-08-31",
    "hasAddress": false,
    "locationId": "",
    "partyName": "",
  },
  "despatchReference": "",
  "dueDate": "2026-09-29",
  "id": "FA2026-0042",
  "isCreditNote": false,
  "issueDate": "2026-09-15",
  "lines": [
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": 1020,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [],
      "description": "Analýza účtovných procesov a návrh úprav",
      "grossPrice": 0,
      "id": "1",
      "name": "Konzultačné služby",
      "note": "Vrátane cestovných nákladov v rámci Bratislavy.",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 12,
      "sellerItemId": "",
      "standardItemId": "",
      "taxCategory": "S",
      "taxPercent": 23,
      "unitCode": "HUR",
      "unitPrice": 85,
    },
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": 720,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [],
      "description": "Ročná licencia pre jedného používateľa",
      "grossPrice": 0,
      "id": "2",
      "name": "Licencia softvéru Účtovník",
      "note": "",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 3,
      "sellerItemId": "",
      "standardItemId": "",
      "taxCategory": "S",
      "taxPercent": 23,
      "unitCode": "H87",
      "unitPrice": 240,
    },
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": 120,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [],
      "description": "Zákon o DPH s komentárom, vydanie 2026",
      "grossPrice": 0,
      "id": "3",
      "name": "Odborná publikácia",
      "note": "",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 5,
      "sellerItemId": "",
      "standardItemId": "",
      "taxCategory": "S",
      "taxPercent": 5,
      "unitCode": "H87",
      "unitPrice": 24,
    },
  ],
  "notes": [
    "Ďakujeme za spoluprácu. Pri úhrade uvádzajte variabilný symbol.",
  ],
  "orderReference": "OBJ-2026-311",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "SK3112000000198742637541",
      "accountName": "Slovenské softvérové riešenia, s. r. o.",
      "bic": "TATRSKBX",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "30",
      "debitedAccount": "",
      "mandateId": "",
      "name": "Prevodný príkaz",
      "paymentIds": [
        "2026000042",
      ],
    },
  ],
  "paymentTerms": [
    "Splatnosť 14 dní od vystavenia. Pri omeškaní úrok 0,05 % denne.",
  ],
  "periodEnd": "2026-08-31",
  "periodStart": "2026-08-01",
  "precedingInvoices": [],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "Bratislava",
      "country": "SK",
      "lines": [
        "Mlynské nivy 12",
        "Budova B, 4. poschodie",
      ],
      "postalZone": "821 09",
      "subentity": "Bratislavský kraj",
    },
    "companyId": "36854321",
    "contactName": "Ing. Ľubomír Kováč",
    "email": "fakturacia@ssr-priklad.sk",
    "endpointId": "2022567890",
    "endpointScheme": "0245",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "Slovenské softvérové riešenia, s. r. o.",
    "name": "Slovenské softvérové riešenia",
    "phone": "+421 2 5556 7788",
    "taxRegistration": "",
    "vatId": "SK2022567890",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 23,
      "taxAmount": 391,
      "taxableAmount": 1700,
    },
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 5,
      "taxAmount": 6,
      "taxableAmount": 120,
    },
  ],
  "totals": {
    "allowanceTotal": 40,
    "chargeTotal": 0,
    "lineExtension": 1860,
    "payable": 2017,
    "prepaid": 200,
    "rounding": 0,
    "taxAmount": 397,
    "taxExclusive": 1820,
    "taxInclusive": 2217,
  },
  "typeCode": "380",
}
`;

exports[`sample documents > parses SK-validation-example.xml 1`] = `
{
  "accountingCost": "",
  "additionalDocuments": [],
  "allowanceCharges": [],
  "buyerReference": "TEST-OBJ-001",
  "contractReference": "",
  "currency": "EUR",
  "customer": {
    "address": {
      "city": "Bratislava",
      "country": "SK",
      "lines": [
        "Testovacia 2",
      ],
      "postalZone": "81101",
      "subentity": "",
    },
    "companyId": "00000001",
    "contactName": "",
    "email": "",
    "endpointId": "0000000001",
    "endpointScheme": "0245",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "TEST Odberatel, fiktivny subjekt",
    "name": "TEST Odberatel, fiktivny subjekt",
    "phone": "",
    "taxRegistration": "",
    "vatId": "",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": null,
  "despatchReference": "",
  "dueDate": "2026-09-26",
  "id": "TEST-VALIDACIA-001",
  "isCreditNote": false,
  "issueDate": "2026-09-12",
  "lines": [
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": 100,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [],
      "description": "",
      "grossPrice": 0,
      "id": "1",
      "name": "Testovacia polozka",
      "note": "",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 1,
      "sellerItemId": "",
      "standardItemId": "",
      "taxCategory": "S",
      "taxPercent": 23,
      "unitCode": "C62",
      "unitPrice": 100,
    },
  ],
  "notes": [],
  "orderReference": "",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "",
      "accountName": "",
      "bic": "",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "10",
      "debitedAccount": "",
      "mandateId": "",
      "name": "",
      "paymentIds": [],
    },
  ],
  "paymentTerms": [],
  "periodEnd": "",
  "periodStart": "",
  "precedingInvoices": [],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "Bratislava",
      "country": "SK",
      "lines": [
        "Testovacia 1",
      ],
      "postalZone": "81101",
      "subentity": "",
    },
    "companyId": "00000000",
    "contactName": "",
    "email": "",
    "endpointId": "0000000000",
    "endpointScheme": "0245",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "TEST Dodavatel, fiktivny subjekt",
    "name": "TEST Dodavatel, fiktivny subjekt",
    "phone": "",
    "taxRegistration": "",
    "vatId": "SK0000000000",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 23,
      "taxAmount": 23,
      "taxableAmount": 100,
    },
  ],
  "totals": {
    "allowanceTotal": 0,
    "chargeTotal": 0,
    "lineExtension": 100,
    "payable": 123,
    "prepaid": 0,
    "rounding": 0,
    "taxAmount": 23,
    "taxExclusive": 100,
    "taxInclusive": 123,
  },
  "typeCode": "380",
}
`;

exports[`sample documents > parses Vat-category-S.xml 1`] = `
{
  "accountingCost": "4025:123:4343",
  "additionalDocuments": [],
  "allowanceCharges": [
    {
      "amount": 200,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": true,
      "reason": "Cleaning",
      "reasonCode": "",
      "taxCategory": "S",
      "taxPercent": 25,
    },
    {
      "amount": 100,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": false,
      "reason": "Discount",
      "reasonCode": "",
      "taxCategory": "S",
      "taxPercent": 25,
    },
  ],
  "buyerReference": "0150abc",
  "contractReference": "",
  "currency": "EUR",
  "customer": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Hovedgatan 32",
        "Po box 878",
      ],
      "postalZone": "456 34",
      "subentity": "",
    },
    "companyId": "39937423947",
    "contactName": "",
    "email": "",
    "endpointId": "FR23342",
    "endpointScheme": "0002",
    "hasAddress": true,
    "identifiers": [
      "0002:FR23342",
    ],
    "legalForm": "",
    "legalName": "Buyer Official Name",
    "name": "BuyerTradingName AS",
    "phone": "",
    "taxRegistration": "",
    "vatId": "SE4598375937",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Delivery street 2",
        "Building 56",
        "Gate 15",
      ],
      "postalZone": "21234",
      "subentity": "Södermalm",
    },
    "date": "2017-11-01",
    "hasAddress": true,
    "locationId": "0088:7300010000001",
    "partyName": "Delivery party Name",
  },
  "despatchReference": "",
  "dueDate": "2017-12-01",
  "id": "Snippet1",
  "isCreditNote": false,
  "issueDate": "2017-11-13",
  "lines": [
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [],
      "amount": 4000,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 09348023",
      ],
      "description": "Description of item",
      "grossPrice": 0,
      "id": "1",
      "name": "item name",
      "note": "Testing note on line level",
      "objectId": "",
      "orderLineReference": "123",
      "originCountry": "NO",
      "periodEnd": "2017-12-05",
      "periodStart": "2017-12-01",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 10,
      "sellerItemId": "97iugug876",
      "standardItemId": "7300010000001",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "C62",
      "unitPrice": 400,
    },
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [],
      "amount": 2000,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 86776",
      ],
      "description": "Description of item",
      "grossPrice": 0,
      "id": "2",
      "name": "item name",
      "note": "",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 10,
      "sellerItemId": "97iugug876",
      "standardItemId": "7300010000001",
      "taxCategory": "S",
      "taxPercent": 15,
      "unitCode": "C62",
      "unitPrice": 200,
    },
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [],
      "amount": 900,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 86776",
      ],
      "description": "Description of item",
      "grossPrice": 0,
      "id": "3",
      "name": "item name",
      "note": "",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [
        {
          "name": "AdditionalItemName",
          "value": "AdditionalItemValue",
        },
      ],
      "quantity": 10,
      "sellerItemId": "97iugug876",
      "standardItemId": "873649827489",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "C62",
      "unitPrice": 90,
    },
  ],
  "notes": [],
  "orderReference": "",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "GB82WEST12345698765432",
      "accountName": "AccountName",
      "bic": "WESTGB2L",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "30",
      "debitedAccount": "",
      "mandateId": "",
      "name": "Credit transfer",
      "paymentIds": [
        "Snippet1",
      ],
    },
  ],
  "paymentTerms": [
    "Payment within 10 days, 2% discount",
  ],
  "periodEnd": "",
  "periodStart": "",
  "precedingInvoices": [],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "London",
      "country": "GB",
      "lines": [
        "Main street 1",
        "Postbox 123",
      ],
      "postalZone": "GB 123 EW",
      "subentity": "",
    },
    "companyId": "GB983294",
    "contactName": "John Doe",
    "email": "john.doe@foo.bar",
    "endpointId": "7300010000001",
    "endpointScheme": "0088",
    "hasAddress": true,
    "identifiers": [
      "99887766",
    ],
    "legalForm": "AdditionalLegalInformation",
    "legalName": "SupplierOfficialName Ltd",
    "name": "SupplierTradingName Ltd.",
    "phone": "9384203984",
    "taxRegistration": "",
    "vatId": "GB1232434",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 25,
      "taxAmount": 1250,
      "taxableAmount": 5000,
    },
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 15,
      "taxAmount": 300,
      "taxableAmount": 2000,
    },
  ],
  "totals": {
    "allowanceTotal": 100,
    "chargeTotal": 200,
    "lineExtension": 6900,
    "payable": 8550,
    "prepaid": 0,
    "rounding": 0,
    "taxAmount": 1550,
    "taxExclusive": 7000,
    "taxInclusive": 8550,
  },
  "typeCode": "380",
}
`;

exports[`sample documents > parses base-creditnote-correction.xml 1`] = `
{
  "accountingCost": "4025:123:4343",
  "additionalDocuments": [],
  "allowanceCharges": [
    {
      "amount": 25,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": true,
      "reason": "Insurance",
      "reasonCode": "",
      "taxCategory": "S",
      "taxPercent": 25,
    },
  ],
  "buyerReference": "0150abc",
  "contractReference": "",
  "currency": "EUR",
  "customer": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Hovedgatan 32",
        "Po box 878",
      ],
      "postalZone": "456 34",
      "subentity": "",
    },
    "companyId": "39937423947",
    "contactName": "Lisa Johnson",
    "email": "lj@buyer.se",
    "endpointId": "FR23342",
    "endpointScheme": "0002",
    "hasAddress": true,
    "identifiers": [
      "0002:FR23342",
    ],
    "legalForm": "",
    "legalName": "Buyer Official Name",
    "name": "BuyerTradingName AS",
    "phone": "23434234",
    "taxRegistration": "",
    "vatId": "SE4598375937",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Delivery street 2",
        "Building 56",
      ],
      "postalZone": "21234",
      "subentity": "",
    },
    "date": "2017-11-01",
    "hasAddress": true,
    "locationId": "0088:9483759475923478",
    "partyName": "Delivery party Name",
  },
  "despatchReference": "",
  "dueDate": "",
  "id": "Snippet1",
  "isCreditNote": true,
  "issueDate": "2017-11-13",
  "lines": [
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [],
      "amount": 2800,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 09348023",
      ],
      "description": "Description of item",
      "grossPrice": 0,
      "id": "1",
      "name": "item name",
      "note": "",
      "objectId": "",
      "orderLineReference": "123",
      "originCountry": "NO",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 7,
      "sellerItemId": "",
      "standardItemId": "21382183120983",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "DAY",
      "unitPrice": 400,
    },
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": -1500,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 09348023",
      ],
      "description": "Description 2",
      "grossPrice": 0,
      "id": "2",
      "name": "item name 2",
      "note": "",
      "objectId": "",
      "orderLineReference": "123",
      "originCountry": "NO",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": -3,
      "sellerItemId": "",
      "standardItemId": "21382183120983",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "DAY",
      "unitPrice": 500,
    },
  ],
  "notes": [
    "Please note we have a new phone number: 22 22 22 22",
  ],
  "orderReference": "",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "GB82WEST12345698765432",
      "accountName": "AccountName",
      "bic": "WESTGB2L",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "30",
      "debitedAccount": "",
      "mandateId": "",
      "name": "Credit transfer",
      "paymentIds": [
        "Snippet1",
      ],
    },
  ],
  "paymentTerms": [
    "Payment within 10 days, 2% discount",
  ],
  "periodEnd": "",
  "periodStart": "",
  "precedingInvoices": [
    {
      "id": "Snippet1",
      "issueDate": "",
    },
  ],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "London",
      "country": "GB",
      "lines": [
        "Main street 1",
        "Postbox 123",
      ],
      "postalZone": "GB 123 EW",
      "subentity": "",
    },
    "companyId": "GB983294",
    "contactName": "",
    "email": "",
    "endpointId": "9482348239847239874",
    "endpointScheme": "0088",
    "hasAddress": true,
    "identifiers": [
      "99887766",
    ],
    "legalForm": "",
    "legalName": "SupplierOfficialName Ltd",
    "name": "SupplierTradingName Ltd.",
    "phone": "",
    "taxRegistration": "",
    "vatId": "GB1232434",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 25,
      "taxAmount": 331.25,
      "taxableAmount": 1325,
    },
  ],
  "totals": {
    "allowanceTotal": 0,
    "chargeTotal": 25,
    "lineExtension": 1300,
    "payable": 1656.25,
    "prepaid": 0,
    "rounding": 0,
    "taxAmount": 331.25,
    "taxExclusive": 1325,
    "taxInclusive": 1656.25,
  },
  "typeCode": "381",
}
`;

exports[`sample documents > parses base-example.xml 1`] = `
{
  "accountingCost": "4025:123:4343",
  "additionalDocuments": [],
  "allowanceCharges": [
    {
      "amount": 25,
      "baseAmount": 0,
      "factor": 0,
      "isCharge": true,
      "reason": "Insurance",
      "reasonCode": "",
      "taxCategory": "S",
      "taxPercent": 25,
    },
  ],
  "buyerReference": "0150abc",
  "contractReference": "",
  "currency": "EUR",
  "customer": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Hovedgatan 32",
        "Po box 878",
      ],
      "postalZone": "456 34",
      "subentity": "",
    },
    "companyId": "39937423947",
    "contactName": "Lisa Johnson",
    "email": "lj@buyer.se",
    "endpointId": "FR23342",
    "endpointScheme": "0002",
    "hasAddress": true,
    "identifiers": [
      "0002:FR23342",
    ],
    "legalForm": "",
    "legalName": "Buyer Official Name",
    "name": "BuyerTradingName AS",
    "phone": "23434234",
    "taxRegistration": "",
    "vatId": "SE4598375937",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": {
    "address": {
      "city": "Stockholm",
      "country": "SE",
      "lines": [
        "Delivery street 2",
        "Building 56",
      ],
      "postalZone": "21234",
      "subentity": "",
    },
    "date": "2017-11-01",
    "hasAddress": true,
    "locationId": "0088:9483759475923478",
    "partyName": "Delivery party Name",
  },
  "despatchReference": "",
  "dueDate": "2017-12-01",
  "id": "Snippet1",
  "isCreditNote": false,
  "issueDate": "2017-11-13",
  "lines": [
    {
      "accountingCost": "Konteringsstreng",
      "allowanceCharges": [],
      "amount": 2800,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 09348023",
      ],
      "description": "Description of item",
      "grossPrice": 0,
      "id": "1",
      "name": "item name",
      "note": "",
      "objectId": "",
      "orderLineReference": "123",
      "originCountry": "NO",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 7,
      "sellerItemId": "",
      "standardItemId": "21382183120983",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "DAY",
      "unitPrice": 400,
    },
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": -1500,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [
        "SRV 09348023",
      ],
      "description": "Description 2",
      "grossPrice": 0,
      "id": "2",
      "name": "item name 2",
      "note": "",
      "objectId": "",
      "orderLineReference": "123",
      "originCountry": "NO",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": -3,
      "sellerItemId": "",
      "standardItemId": "21382183120983",
      "taxCategory": "S",
      "taxPercent": 25,
      "unitCode": "DAY",
      "unitPrice": 500,
    },
  ],
  "notes": [],
  "orderReference": "",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "GB82WEST12345698765432",
      "accountName": "AccountName",
      "bic": "WESTGB2L",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "30",
      "debitedAccount": "",
      "mandateId": "",
      "name": "Credit transfer",
      "paymentIds": [
        "Snippet1",
      ],
    },
  ],
  "paymentTerms": [
    "Payment within 10 days, 2% discount",
  ],
  "periodEnd": "",
  "periodStart": "",
  "precedingInvoices": [],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "London",
      "country": "GB",
      "lines": [
        "Main street 1",
        "Postbox 123",
      ],
      "postalZone": "GB 123 EW",
      "subentity": "",
    },
    "companyId": "GB983294",
    "contactName": "",
    "email": "",
    "endpointId": "9482348239847239874",
    "endpointScheme": "0088",
    "hasAddress": true,
    "identifiers": [
      "99887766",
    ],
    "legalForm": "",
    "legalName": "SupplierOfficialName Ltd",
    "name": "SupplierTradingName Ltd.",
    "phone": "",
    "taxRegistration": "",
    "vatId": "GB1232434",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 25,
      "taxAmount": 331.25,
      "taxableAmount": 1325,
    },
  ],
  "totals": {
    "allowanceTotal": 0,
    "chargeTotal": 25,
    "lineExtension": 1300,
    "payable": 1656.25,
    "prepaid": 0,
    "rounding": 0,
    "taxAmount": 331.25,
    "taxExclusive": 1325,
    "taxInclusive": 1656.25,
  },
  "typeCode": "380",
}
`;

exports[`sample documents > parses broken-example.xml 1`] = `
{
  "accountingCost": "",
  "additionalDocuments": [],
  "allowanceCharges": [],
  "buyerReference": "",
  "contractReference": "",
  "currency": "EUR",
  "customer": {
    "address": {
      "city": "Kosice",
      "country": "",
      "lines": [],
      "postalZone": "",
      "subentity": "",
    },
    "companyId": "",
    "contactName": "",
    "email": "",
    "endpointId": "",
    "endpointScheme": "",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "",
    "name": "Broken Buyer a.s.",
    "phone": "",
    "taxRegistration": "",
    "vatId": "",
  },
  "customizationId": "urn:cen.eu:en16931:2017",
  "delivery": null,
  "despatchReference": "",
  "dueDate": "2026-02-01",
  "id": "BROKEN-1",
  "isCreditNote": false,
  "issueDate": "2026-03-10",
  "lines": [
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": 900,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [],
      "description": "",
      "grossPrice": 0,
      "id": "1",
      "name": "Consulting",
      "note": "",
      "objectId": "",
      "orderLineReference": "",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 10,
      "sellerItemId": "",
      "standardItemId": "",
      "taxCategory": "S",
      "taxPercent": 20,
      "unitCode": "C62",
      "unitPrice": 90,
    },
  ],
  "notes": [],
  "orderReference": "",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "",
      "accountName": "",
      "bic": "",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "30",
      "debitedAccount": "",
      "mandateId": "",
      "name": "",
      "paymentIds": [],
    },
  ],
  "paymentTerms": [],
  "periodEnd": "",
  "periodStart": "",
  "precedingInvoices": [],
  "profileId": "",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "Bratislava",
      "country": "SK",
      "lines": [
        "Hlavna 1",
      ],
      "postalZone": "",
      "subentity": "",
    },
    "companyId": "",
    "contactName": "",
    "email": "",
    "endpointId": "9999999999",
    "endpointScheme": "",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "",
    "name": "Broken Seller s.r.o.",
    "phone": "",
    "taxRegistration": "",
    "vatId": "",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "S",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 20,
      "taxAmount": 50,
      "taxableAmount": 1000,
    },
    {
      "category": "E",
      "exemptionReason": "",
      "exemptionReasonCode": "",
      "percent": 0,
      "taxAmount": 0,
      "taxableAmount": 200,
    },
  ],
  "totals": {
    "allowanceTotal": 0,
    "chargeTotal": 0,
    "lineExtension": 1000,
    "payable": 1050,
    "prepaid": 0,
    "rounding": 0,
    "taxAmount": 50,
    "taxExclusive": 1000,
    "taxInclusive": 1050,
  },
  "typeCode": "380",
}
`;

exports[`sample documents > parses vat-category-E.xml 1`] = `
{
  "accountingCost": "",
  "additionalDocuments": [],
  "allowanceCharges": [],
  "buyerReference": "test reference",
  "contractReference": "",
  "currency": "GBP",
  "customer": {
    "address": {
      "city": "Anytown",
      "country": "DK",
      "lines": [
        "Anystreet 8",
        "Back door",
      ],
      "postalZone": "101",
      "subentity": "RegionB",
    },
    "companyId": "",
    "contactName": "",
    "email": "",
    "endpointId": "DK12345678",
    "endpointScheme": "0184",
    "hasAddress": true,
    "identifiers": [],
    "legalForm": "",
    "legalName": "The Buyercompany",
    "name": "The Buyercompany",
    "phone": "",
    "taxRegistration": "",
    "vatId": "",
  },
  "customizationId": "urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0",
  "delivery": null,
  "despatchReference": "",
  "dueDate": "",
  "id": "Vat-Z",
  "isCreditNote": false,
  "issueDate": "2018-08-30",
  "lines": [
    {
      "accountingCost": "",
      "allowanceCharges": [],
      "amount": 1200,
      "baseQuantity": 1,
      "baseQuantityUnit": "",
      "classifications": [],
      "description": "",
      "grossPrice": 0,
      "id": "1",
      "name": "Test item, category Z",
      "note": "",
      "objectId": "",
      "orderLineReference": "1",
      "originCountry": "",
      "periodEnd": "",
      "periodStart": "",
      "priceDiscount": 0,
      "properties": [],
      "quantity": 10,
      "sellerItemId": "",
      "standardItemId": "192387129837129873",
      "taxCategory": "E",
      "taxPercent": 0,
      "unitCode": "EA",
      "unitPrice": 120,
    },
  ],
  "notes": [],
  "orderReference": "",
  "originatorReference": "",
  "payee": null,
  "paymentMeans": [
    {
      "account": "SE4550000000058398257466",
      "accountName": "",
      "bic": "SEXDABCD",
      "cardHolder": "",
      "cardId": "",
      "cardNetwork": "",
      "code": "30",
      "debitedAccount": "",
      "mandateId": "",
      "name": "",
      "paymentIds": [],
    },
  ],
  "paymentTerms": [
    "Payment within 30 days",
  ],
  "periodEnd": "",
  "periodStart": "",
  "precedingInvoices": [],
  "profileId": "urn:fdc:peppol.eu:2017:poacc:billing:01:1.0",
  "projectReference": "",
  "receiptReference": "",
  "salesOrderReference": "",
  "supplier": {
    "address": {
      "city": "Big city",
      "country": "GB",
      "lines": [
        "Main street 2, Building 4",
      ],
      "postalZone": "54321",
      "subentity": "",
    },
    "companyId": "",
    "contactName": "",
    "email": "",
    "endpointId": "7300010000001",
    "endpointScheme": "0088",
    "hasAddress": true,
    "identifiers": [
      "7300010000001",
    ],
    "legalForm": "",
    "legalName": "The Sellercompany Incorporated",
    "name": "The Sellercompany Incorporated",
    "phone": "",
    "taxRegistration": "",
    "vatId": "GB928741974",
  },
  "taxAmountInTaxCurrency": null,
  "taxCurrency": "",
  "taxPointDate": "",
  "taxRepresentative": null,
  "taxSubtotals": [
    {
      "category": "E",
      "exemptionReason": "",
      "exemptionReasonCode": "VATEX-EU-F",
      "percent": 0,
      "taxAmount": 0,
      "taxableAmount": 1200,
    },
  ],
  "totals": {
    "allowanceTotal": 0,
    "chargeTotal": 0,
    "lineExtension": 1200,
    "payable": 1200,
    "prepaid": 0,
    "rounding": 0,
    "taxAmount": 0,
    "taxExclusive": 1200,
    "taxInclusive": 1200,
  },
  "typeCode": "380",
}
`;
